--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
     <header>
         <div class="encabezado">
             <div class="encabezado-mobile">
-                <img src= "/images/logo-mercado-liebre.svg" class="logo">
+                <a href="/"> <img src= "/images/logo-mercado-liebre.svg" class="logo"> </a>
                 <form action="">
                     <input type="search" placeholder="Buscar productos, marcas"><i class="fas fa-search"></i>
                 </form>
