--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,10 @@
     <header>
         <div class="encabezado">
             <div class="encabezado-mobile">
-                <a href="/"> <img src= "/images/logo-mercado-liebre.svg" class="logo"> </a>
+                <div>
+                    <a href="/"> <img src= "/images/logo-mercado-liebre.svg" class="logo"> </a>
+                </div>
+                
                 <form action="">
                     <input type="search" placeholder="Buscar productos, marcas"><i class="fas fa-search"></i>
                 </form>
