--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 html, body{
-    width: 90vw;
+    width: 100vw;
     background-color: #ebebeb;
     color: black;
     font-family:  'Roboto', sans-serif;
@@ -29,6 +29,10 @@ footer{
 
 }
 
+.logo{
+    width: 100px;
+}
+
 .descripcion{                 /*descripcion del producto*/
     display:none;
 }
@@ -39,7 +43,7 @@ form button{
 
 header,
 .banner{
-    width: 90vw;
+    width: 100vw;
 }
 
 .fa-search{
@@ -72,8 +76,10 @@ header,
     border-radius: 5px;
 }
 .encabezado-mobile form input{
-    width: 130px;
+    width: 50vw;
     border:none;
+    height: 30px;
+    padding: 6px;
 }
 .encabezado p{
     text-align: center;
@@ -168,7 +174,7 @@ footer .iconos {
     display: flex;
     flex-direction: column;
     order: 0;
-    width: 90vw;
+    width: 100vw;
 }
 .contenedor img{
     height: 33vh;
@@ -219,26 +225,6 @@ footer .iconos {
     header{
         width: 100vw;
     }*/
-    .navbar li{
-        margin: 0 5px;
-    }
-    .navbar {
-        margin-top: 50px;
-        display: flex;
-        justify-content: space-between;
-        font-size:12px;
-        width: 90vw;
-    }
-    .navbar ul{
-        list-style: none;
-        display: flex;
-        justify-content: space-around;
-    }
-    .navbar a{
-        text-decoration: none;
-        color: #222222;
-        font-size: 10px;
-    }
     .contenedor h2{
         width: 100%;
         text-align: center;
@@ -247,13 +233,6 @@ footer .iconos {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
-    }
-    .burger-menu{
-        display: none;
-    }
-    .compra-cuotas{
-        display: flex;
-        max-width: 350px;
     }
     .producto img{
         height: auto;
@@ -266,28 +245,6 @@ footer .iconos {
         padding: 5px;
         display: flex;
         flex-direction: column;
-    }
-    .encabezado{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .encabezado-mobile{
-        display: flex;
-        width: 66%;
-        justify-content: space-between;
-    }
-    .encabezado-mobile img{
-        width: 30%;
-    }
-    .encabezado-mobile form{
-        height: 30px;
-        justify-content: center;
-        width:60%;
-    }
-    .encabezado p{
-        width:31%;
-        font-size: 10px;
     }
     .descripcion-producto{
         height: 50px;
@@ -311,6 +268,55 @@ footer .iconos {
     .banner,
     header{
         width: 100vw;
+    }
+    .burger-menu{
+        display: none;
+    }
+    .compra-cuotas{
+        display: flex;
+        max-width: 350px;
+    }
+    .navbar li{
+        margin: 0 5px;
+    }
+    .navbar {
+        margin-top: 50px;
+        display: flex;
+        justify-content: space-between;
+        font-size:12px;
+        width: 100vw;
+    }
+    .navbar ul{
+        list-style: none;
+        display: flex;
+        justify-content: space-around;
+    }
+    .navbar a{
+        text-decoration: none;
+        color: #222222;
+        font-size: 10px;
+    }
+    .encabezado{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .encabezado-mobile{
+        display: flex;
+        width: 66%;
+        justify-content: space-between;
+    }
+    .encabezado-mobile img{
+        width: 30%;
+    }
+    .encabezado-mobile form{
+        height: 30px;
+        justify-content: center;
+        width:60%;
+    }
+    .encabezado p{
+        width:31%;
+        font-size: 10px;
     }
     .producto{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
