--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,12 +67,11 @@ header,
 
 .encabezado-mobile{
     display: flex;
-    width: 35vw;
     justify-content: space-between;
 }
 .encabezado-mobile form{
     display: flex;
-    width:90%;
+    width:70%;
     border-radius: 5px;
 }
 .encabezado-mobile form input{
@@ -216,6 +215,9 @@ footer .iconos {
 }
 
 @media (min-width: 361px){
+    .logo{
+        width: 150px;
+    }
     .descripcion{                             /*descripcion del producto*/
         display: block;
         width: 100vw;
@@ -265,6 +267,9 @@ footer .iconos {
     #footer .iconos{
         transition: all 500ms;
     }
+    .logo{
+        width: 200px;
+    }
     .banner,
     header{
         width: 100vw;
@@ -294,7 +299,7 @@ footer .iconos {
     .navbar a{
         text-decoration: none;
         color: #222222;
-        font-size: 10px;
+        font-size: 18px;
     }
     .encabezado{
         display: flex;
@@ -306,9 +311,6 @@ footer .iconos {
         width: 66%;
         justify-content: space-between;
     }
-    .encabezado-mobile img{
-        width: 30%;
-    }
     .encabezado-mobile form{
         height: 30px;
         justify-content: center;
@@ -316,7 +318,7 @@ footer .iconos {
     }
     .encabezado p{
         width:31%;
-        font-size: 10px;
+        font-size: 15px;
     }
     .producto{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
